tests/negative/neg_pr113_tuple_field_oob.safe
package neg_PR113_Tuple_Field_Oob
   pair : (boolean, integer) = (True, 1);
   value : integer = pair.3;

